Fixed AVRO-1937, C++ code genrator now handles recursive structures well